[css-grid] Growth limits not increased with min-content contributions of spanning items
Categories
(Core :: Layout: Grid, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox82 | --- | fixed |
People
(Reporter: mozilla-apprentice, Assigned: Oriol)
References
Details
Attachments
(1 file)
A resolution was made for csswg-drafts/#4790.
[css-grid] Growth limits not increased with min-content contributions of spanning items
- RESOLVED: Accept the edits made to the ED re minimum vs min-content (and add WPT tests)
| Assignee | ||
Comment 1•5 years ago
|
||
Basically, revert https://bugzilla.mozilla.org/show_bug.cgi?id=1255393#c12
switch (phase) {
case TrackSizingPhase::IntrinsicMinimums:
return mMinSize;
case TrackSizingPhase::ContentBasedMinimums:
case TrackSizingPhase::IntrinsicMaximums:
return mMinContentContribution;
case TrackSizingPhase::MaxContentMinimums:
case TrackSizingPhase::MaxContentMaximums:
return mMaxContentContribution;
}
| Assignee | ||
Comment 2•5 years ago
|
||
By mistake the specification used to say that, for items spanning
multiple tracks, the growth limits of the tracks with an intrinsic max
track sizing function should grow to accommodate the minimum
contribution of the item.
But this was a mistake, because an intrinsic max track sizing function
can only be min-content or max-content. So instead of distributing the
minimum contribution, it should be the min-content contribution.
The spec has been fixed and there is a CSSWG resolution in
https://github.com/w3c/csswg-drafts/issues/4790
This patch fixes the problem by reverting 2b923d48ea7e. The change is
likely web compatible, since it only affects a rare edge case with
'minmax()' where the min sizing function is 'auto' or a fixed value
smaller than the min-content contribution, the max sizing function is
'min-content', and an item whose minimum contribution is forced to be
smaller than the min-content contribution, and spans multiple tracks.
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
Fixed in Chromium: https://bugs.chromium.org/p/chromium/issues/detail?id=1122084
And WebKit: https://bugs.webkit.org/show_bug.cgi?id=216142
Comment 5•5 years ago
|
||
| bugherder | ||
Description
•